--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,44 @@ Resources/text.txt/text.txt
 test.zip
 *.zip
 x64/Release/Engine.vcxproj.FileListAbsolute.txt
+packages/directxtk12_desktop_2015.2019.12.17.1/build/native/directxtk12_desktop_2015.targets
+packages/directxtk12_desktop_2015.2019.12.17.1/directxtk12_desktop_2015.2019.12.17.1.nupkg
+packages/directxtk12_desktop_2015.2019.12.17.1/docs/Readme.txt
+packages/directxtk12_desktop_2015.2019.12.17.1/images/icon.jpg
+packages/directxtk12_desktop_2015.2019.12.17.1/include/Audio.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/CommonStates.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/DDSTextureLoader.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/DescriptorHeap.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/DirectXHelpers.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/EffectPipelineStateDescription.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/Effects.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/GamePad.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/GeometricPrimitive.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/GraphicsMemory.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/Keyboard.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/Model.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/Mouse.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/PostProcess.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/PrimitiveBatch.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/RenderTargetState.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/ResourceUploadBatch.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/ScreenGrab.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/SimpleMath.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/SimpleMath.inl
+packages/directxtk12_desktop_2015.2019.12.17.1/include/SpriteBatch.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/SpriteFont.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/VertexTypes.h
+packages/directxtk12_desktop_2015.2019.12.17.1/include/WICTextureLoader.h
+packages/directxtk12_desktop_2015.2019.12.17.1/lib/Win32/Debug/DirectXTK12.lib
+packages/directxtk12_desktop_2015.2019.12.17.1/lib/Win32/Release/DirectXTK12.lib
+packages/directxtk12_desktop_2015.2019.12.17.1/lib/x64/Debug/DirectXTK12.lib
+packages/directxtk12_desktop_2015.2019.12.17.1/lib/x64/Release/DirectXTK12.lib
+packages/rapidxml.1.13/build/configurations.autopkg
+packages/rapidxml.1.13/build/native/default-propertiesui.xml
+packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml.hpp
+packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_iterators.hpp
+packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_print.hpp
+packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_utils.hpp
+packages/rapidxml.1.13/build/native/rapidxml.targets
+packages/rapidxml.1.13/build/publisher-info.txt
+packages/rapidxml.1.13/rapidxml.1.13.nupkg
