Added support for the resource manager to read DAE files
support for DAE files is through the Open Asset Import Library
ResourceEntry contains a pointer to a scene structure that can be used for creating the necessary data structures in a post process step

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,6 @@ packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_iterators.hpp
 packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_print.hpp
 packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_utils.hpp
 packages/rapidxml.1.13/build/publisher-info.txt
+*.dll
+Resources/cat.dae
+Resources/cat.zip
