added chapter 15  stuff to renderer, added Scene class, fixed bugs
added the necessary structures and functions to the renderer class.
modified Engine to have a scene, and fixed the initialization order.
Scene class requests resources to be loaded, and will eventually call update on the render items.
fixed hashtable by making at function return a reference.
fixed resourcemanager's use of hashtable by removing all instances where we edit the local copy of the structure that at returned.

--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="RenderManager\FrameResources.cpp" />
     <ClCompile Include="RenderManager\MathHelper.cpp" />
     <ClCompile Include="RenderManager\Renderer.cpp" />
+    <ClCompile Include="RenderManager\Scene.cpp" />
     <ClCompile Include="RenderManager\Timer.cpp" />
     <ClCompile Include="RenderManager\Window.cpp" />
     <ClCompile Include="ResourceManager\ResourceManager.cpp" />
@@ -58,6 +59,7 @@
     <ClInclude Include="RenderManager\MathHelper.h" />
     <ClInclude Include="RenderManager\Renderer.h" />
     <ClInclude Include="RenderManager\RenderItem.h" />
+    <ClInclude Include="RenderManager\Scene.h" />
     <ClInclude Include="RenderManager\Timer.h" />
     <ClInclude Include="RenderManager\UploadBuffer.h" />
     <ClInclude Include="RenderManager\Window.h" />
