--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClCompile Include="RenderManager\Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RenderManager\Scene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -203,6 +206,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RenderManager\Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderManager\Scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
