started work on building mesh and vertex data from file
created a geometry header file that contains the MeshData and VertexData that we read in from a file
changed resource manager to use the new[] operator to create the space for the compressed zip file data as reading in an FBX file was causing issues when freeing the compressed handle from the general allocator, and I really dont think there's a bug there,a nd if there is I dont feel like tracking it down now

--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -119,6 +119,9 @@
     <ClCompile Include="RenderManager\Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RenderManager\Geometry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -209,6 +212,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RenderManager\Scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderManager\Geometry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
