--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,10 @@ packages/rapidxml.1.13/build/publisher-info.txt
 *.dll
 Resources/cat.dae
 Resources/cat.zip
+Resources/CrateModel.dae
+Resources/CrateModel.fbx
+Resources/CrateModel.zip
+Resources/Handgun_binary.fbx
+Resources/Handgun_binary.zip
+Resources/Handgun_dae.dae
+Resources/Handgun_dae.zip
