sucessfully read a file in, build the mesh data, and render it to the screen

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ Resources/Handgun_binary.fbx
 Resources/Handgun_binary.zip
 Resources/Handgun_dae.dae
 Resources/Handgun_dae.zip
+Resources/box.dae
+Resources/box.zip
