made scene class build the scene by readin in the node hierarchy

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ Resources/Handgun_dae.dae
 Resources/Handgun_dae.zip
 Resources/box.dae
 Resources/box.zip
+Resources/Sword.dae
+Resources/Sword.zip
+Resources/Sword_Textures.zip
