made resource manager support dds files. added maps to the resource manager to support data retrieval that is needed for the renderer

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,12 @@ Resources/box.zip
 Resources/Sword.dae
 Resources/Sword.zip
 Resources/Sword_Textures.zip
+Resources/Sword/Sting_Base_Color.dds
+Resources/Sword/Sting_Emissive.dds
+Resources/Sword/Sting_Height.dds
+Resources/Sword/Sting_Metallic.dds
+Resources/Sword/Sting_Mixed_AO.dds
+Resources/Sword/Sting_Normal.dds
+Resources/Sword/Sting_Normal_DirectX.dds
+Resources/Sword/Sting_Roughness.dds
+Resources/Sword/Sword.dae
