implemented basic texturing of a single object

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,44 @@ Resources/Sword/Sting_Normal.dds
 Resources/Sword/Sting_Normal_DirectX.dds
 Resources/Sword/Sting_Roughness.dds
 Resources/Sword/Sword.dae
+x64/Debug/Camera.nativecodeanalysis.sarif
+x64/Debug/Camera.nativecodeanalysis.xml
+x64/Debug/d3dUtil.nativecodeanalysis.sarif
+x64/Debug/d3dUtil.nativecodeanalysis.xml
+x64/Debug/DDSTextureLoader12.nativecodeanalysis.sarif
+x64/Debug/DDSTextureLoader12.nativecodeanalysis.xml
+x64/Debug/Engine.nativecodeanalysis.sarif
+x64/Debug/Engine.nativecodeanalysis.xml
+x64/Debug/FrameResources.nativecodeanalysis.sarif
+x64/Debug/FrameResources.nativecodeanalysis.xml
+x64/Debug/InputManager.nativecodeanalysis.sarif
+x64/Debug/InputManager.nativecodeanalysis.xml
+x64/Debug/JobSystem.nativecodeanalysis.sarif
+x64/Debug/JobSystem.nativecodeanalysis.xml
+x64/Debug/main.nativecodeanalysis.sarif
+x64/Debug/main.nativecodeanalysis.xml
+x64/Debug/MathHelper.nativecodeanalysis.sarif
+x64/Debug/MathHelper.nativecodeanalysis.xml
+x64/Debug/Matrix.nativecodeanalysis.sarif
+x64/Debug/Matrix.nativecodeanalysis.xml
+x64/Debug/MemoryManager.nativecodeanalysis.sarif
+x64/Debug/MemoryManager.nativecodeanalysis.xml
+x64/Debug/Object.nativecodeanalysis.sarif
+x64/Debug/Object.nativecodeanalysis.xml
+x64/Debug/Quaternion.nativecodeanalysis.sarif
+x64/Debug/Quaternion.nativecodeanalysis.xml
+x64/Debug/Renderer.nativecodeanalysis.sarif
+x64/Debug/Renderer.nativecodeanalysis.xml
+x64/Debug/ResourceManager.nativecodeanalysis.sarif
+x64/Debug/ResourceManager.nativecodeanalysis.xml
+x64/Debug/Scene.nativecodeanalysis.sarif
+x64/Debug/Scene.nativecodeanalysis.xml
+x64/Debug/Timer.nativecodeanalysis.sarif
+x64/Debug/Timer.nativecodeanalysis.xml
+x64/Debug/Utilities.nativecodeanalysis.sarif
+x64/Debug/Utilities.nativecodeanalysis.xml
+x64/Debug/vc.nativecodeanalysis.all.xml
+x64/Debug/Vector.nativecodeanalysis.sarif
+x64/Debug/Vector.nativecodeanalysis.xml
+x64/Debug/Window.nativecodeanalysis.sarif
+x64/Debug/Window.nativecodeanalysis.xml
