--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,4 @@ x64/Debug/Vector.nativecodeanalysis.sarif
 x64/Debug/Vector.nativecodeanalysis.xml
 x64/Debug/Window.nativecodeanalysis.sarif
 x64/Debug/Window.nativecodeanalysis.xml
+Resources/floor.zip
