Fixed texture binding system to allow any variation of amount of textures
fixed by creating a shader resource view to a dummy texture if the scene code does not supply it with a texture to use.
we have to bind a dummy texture because we have to have all slots in the descriptorheap/texture table filled

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,5 @@ x64/Debug/Vector.nativecodeanalysis.xml
 x64/Debug/Window.nativecodeanalysis.sarif
 x64/Debug/Window.nativecodeanalysis.xml
 Resources/floor.zip
+Resources/black.dds
+Resources/default.zip
