--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -19,7 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Collision\BroadCollide.cpp" />
+    <ClCompile Include="Collision\CollisionEngine.cpp" />
+    <ClCompile Include="Collision\Contact.cpp" />
+    <ClCompile Include="Collision\NarrowCollide.cpp" />
+    <ClCompile Include="Collision\RigidBody.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Gameplay\GameObject.cpp" />
     <ClCompile Include="Math\Matrix.cpp" />
     <ClCompile Include="Math\Quaternion.cpp" />
     <ClCompile Include="Math\Vector.cpp" />
@@ -41,8 +47,15 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Collision\BroadCollide.h" />
+    <ClInclude Include="Collision\CollisionEngine.h" />
+    <ClInclude Include="Collision\CollisionObject.h" />
+    <ClInclude Include="Collision\Contact.h" />
+    <ClInclude Include="Collision\NarrowCollide.h" />
+    <ClInclude Include="Collision\RigidBody.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Gameplay\GameObject.h" />
     <ClInclude Include="Math\Line.h" />
     <ClInclude Include="Math\Matrix.h" />
     <ClInclude Include="Math\Plane.h" />
