--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClCompile Include="Gameplay\GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Collision\CollisionObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
