--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,42 @@ packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_utils.hpp
 packages/rapidxml.1.13/build/native/rapidxml.targets
 packages/rapidxml.1.13/build/publisher-info.txt
 packages/rapidxml.1.13/rapidxml.1.13.nupkg
+x64/Release/assimp-vc142-mtd.dll
+x64/Release/assimp-vc142-mt.dll
+x64/Debug/Window.nativecodeanalysis.sarif
+x64/Debug/Vector.nativecodeanalysis.sarif
+x64/Debug/Utilities.nativecodeanalysis.sarif
+x64/Debug/Timer.nativecodeanalysis.sarif
+x64/Debug/Scene.nativecodeanalysis.sarif
+x64/Debug/ResourceManager.nativecodeanalysis.sarif
+x64/Debug/Renderer.nativecodeanalysis.sarif
+x64/Debug/Quaternion.nativecodeanalysis.sarif
+x64/Debug/Object.nativecodeanalysis.sarif
+x64/Debug/MemoryManager.nativecodeanalysis.sarif
+x64/Debug/Matrix.nativecodeanalysis.sarif
+x64/Debug/MathHelper.nativecodeanalysis.sarif
+x64/Debug/main.nativecodeanalysis.sarif
+x64/Debug/JobSystem.nativecodeanalysis.sarif
+x64/Debug/InputManager.nativecodeanalysis.sarif
+x64/Debug/FrameResources.nativecodeanalysis.sarif
+x64/Debug/Engine.nativecodeanalysis.sarif
+x64/Debug/DDSTextureLoader12.nativecodeanalysis.sarif
+x64/Debug/d3dUtil.nativecodeanalysis.sarif
+x64/Debug/Camera.nativecodeanalysis.sarif
+x64/Debug/assimp-vc142-mtd.dll
+x64/Debug/assimp-vc142-mt.dll
+Resources/Sword/Sword.dae
+Resources/Sword/Sting_Roughness.dds
+Resources/Sword/Sting_Normal.dds
+Resources/Sword/Sting_Metallic.dds
+Resources/Sword/Sting_Height.dds
+Resources/Sword.dae
+Resources/Handgun_dae.dae
+Resources/Handgun_binary.fbx
+Resources/CrateModel.fbx
+Resources/CrateModel.dae
+Resources/cat.dae
+Resources/box.dae
+Resources/black.dds
+Release/assimp-vc142-mt.dll
+Debug/assimp-vc142-mtd.dll
